manifests/model_container.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-llms
spec:
  ports:
    - name: minio-client-port
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio-llms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-minio-container # <--- change this
labels:
    app: minio-llms # <--- change this to match label on the pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-llms  # <--- change this to match label on the pod
  template: # => from here down copy and paste the pods metadata: and spec: sections
    metadata:
      labels:
        app: minio-llms
        maistra.io/expose-route: 'true'
      name: minio-llms
    spec:
      volumes:
      - name: model-volume
        persistentVolumeClaim:
          claimName: vllm-models-claim
      containers:
        - env:
            - name: MINIO_ROOT_USER
              value: THEACCESSKEY
            - name: MINIO_ROOT_PASSWORD
              value: THESECRETKEY
            - name: MINIO_IMPORT_DIR
              value: /import
            - name: MINIO_DEFAULT_BUCKET
              value: llms
          image: quay.io/christinaexyou/modelmesh-minio-examples:arm
          name: minio
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: "/import/"
              name: model-volume
